// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaCheckbox default 1`] = `
<va-input-wrapper-stub messages="" errormessages="" errorcount="1" class="va-checkbox">
  <div tabindex="-1" class="va-checkbox__input-container">
    <div class="va-checkbox__square"><input readonly="readonly" class="va-checkbox__input">
      <va-icon-stub color="" size="" sizesconfig="[object Object]" fontsizesconfig="[object Object]" name="check" tag="i" rotation="" iconsconfig="[object Object]" class="va-checkbox__icon-selected"></va-icon-stub>
    </div>
    <div tabindex="-1" class="va-checkbox__label-text">

    </div>
  </div>
</va-input-wrapper-stub>
`;

exports[`VaCheckbox true value 1`] = `
<va-input-wrapper-stub messages="" errormessages="" errorcount="1" class="va-checkbox va-checkbox--selected">
  <div tabindex="-1" class="va-checkbox__input-container">
    <div class="va-checkbox__square"><input readonly="readonly" class="va-checkbox__input" style="background: rgb(0, 0, 0);">
      <va-icon-stub color="" size="" sizesconfig="[object Object]" fontsizesconfig="[object Object]" name="check" tag="i" rotation="" iconsconfig="[object Object]" class="va-checkbox__icon-selected"></va-icon-stub>
    </div>
    <div tabindex="-1" class="va-checkbox__label-text">

    </div>
  </div>
</va-input-wrapper-stub>
`;
